--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a Node.js command-line application that accepts information about employees on a software engineering team, then generates an HTML page that displays summaries for each person.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
